WATSON-28: Fix cpu usage clipping

--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -13,5 +13,5 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
